--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Junkie Hotels</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Parisienne&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/main.css" />
     <script src="./js/all.min.js"></script>
   </head>
   <body>
     <!--Preloader-->
-<div class="preloader">
-  <img src="./images/preloader.gif" alt="loading" class="preloader__item">
-</div>
+    <div class="preloader">
+      <img src="./images/preloader.gif" alt="loading" class="preloader__item" />
+    </div>
     <!-- End of Preloader-->
 
     <!--Begining of header-->
@@ -50,31 +54,149 @@
       <!--End of NavBtn-->
 
       <!--NavList-->
-<nav class="nav">
-  <ul class="nav__links">
-    <!--logo-->
-    <li><a href="#" class="nav__single-link"><img src="./images/sweethomes.png" alt="sweethomes"></a></li>
-    <li><a href="#header" class="nav__single-link">Home</a></li>
-    <li><a href="#about" class="nav__single-link">About</a></li>
-    <li><a href="#rooms" class="nav__single-link">Rooms</a></li>
-    <li><a href="#works" class="nav__single-link">Works</a></li>
-    <li><a href="#contact" class="nav__single-link">contact</a></li>
+      <nav class="nav">
+        <ul class="nav__links">
+          <!--logo-->
+          <li>
+            <a href="#" class="nav__single-link"
+              ><img src="./images/sweethomes.png" alt="sweethomes"
+            /></a>
+          </li>
+          <li><a href="#header" class="nav__single-link">Home</a></li>
+          <li><a href="#about" class="nav__single-link">About</a></li>
+          <li><a href="#rooms" class="nav__single-link">Rooms</a></li>
+          <li><a href="#works" class="nav__single-link">Works</a></li>
+          <li><a href="#contact" class="nav__single-link">contact</a></li>
+        </ul>
+      </nav>
 
-  </ul>
-</nav>
-      
       <!-- End of NavList-->
 
-        <!-- Video Switch Container-->
-        <div class="video__switch-container">
-          <div class="video__switch">
-            <span>On</span>
-            <span>Off</span>
-            <div class="video__switch-btn"></div>
-          </div>
+      <!-- Video Switch Container-->
+      <div class="video__switch-container">
+        <div class="video__switch">
+          <span>On</span>
+          <span>Off</span>
+          <div class="video__switch-btn"></div>
         </div>
+      </div>
     </header>
     <!--End of header-->
+
+    <!--Begining of About-->
+    <section class="about section-padding" id="about">
+      <div class="grid-container grid--container-medium-2">
+        <!--About Container-->
+        <article class="about-container">
+          <!--First Child-->
+          <div class="section-title">
+            <h1 class="section-title-name text-slanted">Our Story</h1>
+            <div class="section-title__underline"></div>
+            <p class="section-title__text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Blanditiis possimus illum quisquam tempore accusantium laboriosam
+              omnis vero, ipsum ad qui.
+            </p>
+          </div>
+          <!--Second Child-->
+          <div class="about__img">
+            <img
+              src="./images/aboutImg-1.jpeg"
+              alt="about image"
+              class="about__img-item"
+            />
+          </div>
+        </article>
+        <!-- End of About Container-->
+        <!--About Container-->
+        <article class="about-container">
+          <!--Second Child-->
+          <div class="section-title">
+            <h1 class="section-title-name text-slanted">What We DO</h1>
+            <div class="section-title__underline"></div>
+            <p class="section-title__text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Blanditiis possimus illum quisquam tempore accusantium laboriosam
+              omnis vero, ipsum ad qui.
+            </p>
+          </div>
+          <!--Second Child-->
+          <div class="about__img about__img-special">
+            <img
+              src="./images/aboutImg-2.jpeg"
+              alt="about image"
+              class="about__img-item"
+            />
+          </div>
+        </article>
+        <!-- End of About Container-->
+      </div>
+    </section>
+
+    <!--End of About-->
+
+    <!--Rooms Section-->
+
+    <section class="rooms section-padding" id="rooms">
+      <div class="grid-container">
+        <!--Firs Child-->
+        <form action="" class="room-form">
+          <p class="room-form-feedback">
+            sometext here
+          </p>
+          <h3 class="room-form-title slanted-text">Get a Room Discount</h3>
+          <div class="room-form-input">
+            <input
+              type="text"
+              name="name"
+              id=""
+              class="input-name"
+              maxlength="15"
+              placeholder="Name"
+            />
+          </div>
+          <div class="room-form-input">
+            <input
+              type="text"
+              name="lastname"
+              id=""
+              class="input-lastname"
+              maxlength="15"
+              placeholder="Last Name"
+            />
+          </div>
+          <div class="room-form-input">
+            <input
+              type="email"
+              name="email"
+              id=""
+              class="input-email"
+              maxlength="15"
+              placeholder="Email"
+            />
+          </div>
+          <input type="submit" value="Sign Up" class="input-submit" />
+        </form>
+
+        <!--Second Child-->
+        <article class="room-card">
+          <h3 class="room-card-title text-slanted">Lucky People:</h3>
+          <div class="room-card__list">
+            <div class="person">
+              <img
+                src="./images/person1.jpg"
+                alt="person"
+                class="person-thumbnail"
+              />
+              <h4 class="person__name">john</h4>
+              <h4 class="person__last-name">doe</h4>
+            </div>
+          </div>
+        </article>
+      </div>
+    </section>
+
+    <!--End of Rooms Section-->
     <script src="./js/app.js"></script>
   </body>
 </html>
