--- a/index.html
+++ b/index.html
@@ -141,9 +141,7 @@
       <div class="grid-container">
         <!--Firs Child-->
         <form action="" class="room-form">
-          <p class="room-form-feedback">
-            sometext here
-          </p>
+          <p class="room-form-feedback"></p>
           <h3 class="room-form-title slanted-text">Get a Room Discount</h3>
           <div class="room-form-input">
             <input
@@ -181,22 +179,34 @@
         <!--Second Child-->
         <article class="room-card">
           <h3 class="room-card-title text-slanted">Lucky People:</h3>
-          <div class="room-card__list">
-            <div class="person">
-              <img
-                src="./images/person1.jpg"
-                alt="person"
-                class="person-thumbnail"
-              />
-              <h4 class="person__name">john</h4>
-              <h4 class="person__last-name">doe</h4>
-            </div>
-          </div>
+          <div class="room-card__list"></div>
         </article>
       </div>
     </section>
-
     <!--End of Rooms Section-->
+
+    <!--Works-->
+    <section class="work section-padding" id="work">
+      <div class="section-title section-title--left">
+        <h1 class="section-title-name text-slanted">Our Works</h1>
+        <div class="section-title__underline"></div>
+        <p class="section-title__text">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis
+          possimus illum quisquam tempore accusantium laboriosam omnis vero,
+          ipsum ad qui.
+        </p>
+        <!--End of Section title-->
+      </div>
+      <div class="work-container">
+        <!--Single Work item-->
+        <article class="work-item item-1">
+          <img src="./images/work1.jpg" alt="works" class="work-item-img" />
+        </article>
+        <!-- End of Single Work item-->
+      </div>
+    </section>
+
+    <!-- End of Works-->
     <script src="./js/app.js"></script>
   </body>
 </html>
